# WhatIsBot

./: Classifier.hs  LICENSE  Local.hs  Main.hs  WhatIsBot.cabal
resources/: historians.txt  pharma.txt  pokemons.txt  pokemons1st.txt
